--- a/assets/styles/app.styl
+++ b/assets/styles/app.styl
@@ -14,6 +14,8 @@ $theme := {
   links: rgb(25, 25, 25)
 }
 
+$font-size-root := 16px
+
 // Import Vuetify styling
 @require '~vuetify/src/stylus/main.styl'
 
