Add mailchimp newsletter signup form

--- a/pages/about.scss
+++ b/pages/about.scss
@@ -1,7 +1,7 @@
 @import '~assets/styles/variables.scss';
 
 #legal {
-  .component-contactAddress,
+  .component-newsletter,
   .component-socialMenu,
   .contact-dialog {
     margin-bottom: 1em;
