--- a/pages/explore.scss
+++ b/pages/explore.scss
@@ -1,4 +1,8 @@
 @import '~assets/styles/variables.scss';
 
 #explore {
+  .component-members {
+    margin-bottom: 1em;
+    min-height: 300px;
   }
+}
