Add link to story in members dialog

--- a/components/members.scss
+++ b/components/members.scss
@@ -316,6 +316,10 @@
       }
     }
 
+    .content-story {
+      margin-bottom: 1em;
+    }
+
     .content-social {
       .btn {
         margin: 0;
