--- a/pages/index.scss
+++ b/pages/index.scss
@@ -6,21 +6,54 @@
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    perspective: 1000px;
     position: relative;
+    transform: translate3d(0, 0, 0);
 
     .logo {
-      width: 60vw;
+      display: flex;
+      flex-direction: column;
+      margin-left: auto;
+      margin-right: auto;
       max-width: 500px;
       max-height: 100%;
+      width: 60vw;
       @media (min-width: $breakpointSmall) {
-        width: 40vw;
+        width: 35vw;
       }
       @media (min-height: 600px) {
-        max-height: 500px;
+        max-height: 400px;
+      }
+    }
+
+    .logo-brandmark {
+      opacity: 0;
+      perspective: 1000px;
+      transform: translate3d(100px, 100px, 100px) scale(5) rotate(15deg);
+      transition: 400ms cubic-bezier(.53,1.35,.73,.95);
+    }
+
+    .logo-logotype {
+      transform: translateY(-26%);
+    }
+
+    .claim {
+      font-size: 1.4em;
+      margin-top: 1em;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 90%;
+      text-align: center;
+      text-transform: uppercase;
+
+      @media (min-width: $breakpointSmall) {
+        font-size: 2em;
+        margin-top: 1em;
       }
     }
 
     .more {
+      animation: more 1s ease-out infinite;
       position: absolute;
       bottom: 20px;
       left: 50%;
@@ -37,5 +70,46 @@
       margin-top: 2em;
       margin-bottom: 1em;
     }
+  }
+
+  &.ready .wallpaper {
+    animation: shake 0.5s 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+
+    .logo-brandmark {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) scale(1) rotate(0);
+    }
+  }
+}
+
+@keyframes shake {
+  10% {
+    transform: perspective(1000px) translate3d(-5px, 0, -100px) rotate(1deg);
+  }
+
+  16%,
+  76% {
+    transform: perspective(1000px) translate3d(2px, 0, 10px);
+  }
+
+  30%,
+  50%,
+  68% {
+    transform: perspective(1000px) translate3d(4px, 0, -5px);
+  }
+
+  40%,
+  58% {
+    transform: perspective(1000px) translate3d(-4px, 0, -5px);
+  }
+
+  85% {
+    transform: perspective(1000px) translate3d(-1px, 0, 0);
+  }
+}
+
+@keyframes more {
+  50% {
+    transform: translate(-50%, 10%);
   }
 }
