--- a/pages/stories/indiz.scss
+++ b/pages/stories/indiz.scss
@@ -2,7 +2,6 @@
 
 #story {
   font-size: 1.2em;
-  // padding-top: 70px;
   position: relative;
 
   &::before {
@@ -30,6 +29,7 @@
   }
 
   .image {
+    margin-top: 3em;
     margin-bottom: 3em;
   }
 
