Fix for vuetify

--- a/components/layout.scss
+++ b/components/layout.scss
@@ -223,6 +223,7 @@ h3 {
 
   .btn-x {
     background-color: transparent !important;
+    box-shadow: none;
     position: absolute;
     right: 0;
     top: 0;
