--- a/components/layout.scss
+++ b/components/layout.scss
@@ -38,6 +38,20 @@ h1 {
   margin-top: 1em;
   margin-bottom: 0.6em;
   letter-spacing: -0.01em;
+  line-height: 1.2;
+  font-size: 3em;
+
+  @media (min-width: $breakpointMini) {
+    font-size: 4em;
+  }
+
+  @media (min-width: $breakpointSmall) {
+    font-size: 5em;
+  }
+
+  @media (min-width: $breakpointMedium) {
+    font-size: 7em;
+  }
 
   + .abstract {
     font-size: 1.3em;
@@ -49,6 +63,20 @@ h1 {
 
 h2 {
   margin-bottom: 0.7em;
+  line-height: 1.2;
+  font-size: 2.4em;
+
+  @media (min-width: $breakpointMini) {
+    font-size: 3em;
+  }
+
+  @media (min-width: $breakpointSmall) {
+    font-size: 3.5em;
+  }
+
+  @media (min-width: $breakpointMedium) {
+    font-size: 4em;
+  }
 
   + .abstract {
     font-size: 1.2em;
